# zmux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
src/: ai_detect.rs  app.rs  client.rs  config.rs  input.rs  main.rs  protocol.rs  pty.rs  server.rs  session.rs  ui.rs  worktree.rs
