[package]
name = "zmux"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.8"
vt100 = "0.15"
tui-term = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
serde_json = "1"
libc = "0.2"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
vt100 = { path = "vendor/vt100" }
